--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -1,3 +1,8 @@
+.menu-wrap{
+    background-color: #4e2c1e;
+    height: 5px;
+}
+
 .menu{
     display: flex;
     justify-content: space-between;
@@ -8,7 +13,6 @@
     background-image: -webkit-linear-gradient( 90deg, rgb(164,103,31) 0%, rgb(131,76,11) 14%, rgb(119,71,11) 25%, rgb(176,120,43) 55%, rgb(233,192,135) 100%);
     box-shadow: 0px 1px 0px 0px rgba(126, 79, 19, 0.004);
     border-radius: 3px;
-    z-index: 2;
 }
 
 .menu::after{
@@ -19,6 +23,7 @@
     position: absolute;
     left: calc(50% - 120px);
     top: -55px;
+    z-index: 1;
 }
 
 .left-block, .right-block{
