--- a/static/css/staff.css
+++ b/static/css/staff.css
@@ -1,5 +1,5 @@
 .get_staff{
-    margin-top: 30px;
+    margin-top: 56px;
     width: 100%;
     padding: 0 22px;
     box-sizing: border-box;
@@ -69,43 +69,49 @@
     position: relative;
 }
 
+
+
 .get_staff-form_wrap-competition label{
     padding-left: 2px;
 }
 
+.get_staff-form_wrap-competition .wrap{
+    display: flex;
+    position: relative;
+    cursor: pointer;
+    margin-top: 16px;
+}
+
+
+
 .get_staff-form_wrap-competition input{
+    background-image: url('../images/select_background.png');
+    background-repeat: no-repeat;
+    background-position-x: 100%;
     padding-left: 13px;
     outline: 0;
     height: 32px;
-    box-sizing: border-box;
-    margin-top: 16px;
-    border: 1px solid #ab6e17;
     border-radius: 1px;
     font-size: 18px;
     font-family: "Verdana";
     color: rgb(69, 37, 10);
     line-height: 1.2;
     text-shadow: 0px 1px 0px rgba(17, 17, 26, 0.46);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url('../images/select_background.png');
-    background-repeat: no-repeat;
-    background-position-x: 100%;
-    z-index: 2;
-    position: relative;
+    box-sizing: border-box;
+    border: 0;
+    width: 100%;
     cursor: pointer;
+    z-index: 1;
+    border: 1px solid #ab6e17;
 }
 
-.get_staff-form_wrap-competition::after{
-    content: '';
-    background-image: url('../images/select_arrow.png');
+.get_staff-form_wrap-competition .wrap img{
     width: 19px;
     height: 11px;
+    top: 11.5px;
     position: absolute;
     right: 4px;
-    bottom: 8px;
     z-index: 2;
-    cursor: pointer;
 }
 
 .get_staff-form_wrap-competition-select{
@@ -113,10 +119,9 @@
     height: 160px;
     border: 1px solid rgb(177, 177, 177);
     position: absolute;
-    top: 42.5px;
-    left: 0;
+    top: 0px;
+    left: 0px;
     background-color: rgb(252,235,198);
-    z-index: 1;
     display: none;
     flex-direction: column-reverse;
 }
@@ -129,7 +134,7 @@
     font-size: 18px;
     font-family: "Verdana";
     color: rgb(69, 37, 10);
-    line-height: 1.778;  
+    line-height: 1.8;  
 }
 
 .get_staff-form_wrap-competition-select__option:hover{
